rm regex, layout updates

--- a/templates/commercial.twig
+++ b/templates/commercial.twig
@@ -1,7 +1,5 @@
 <html lang="en" dir="ltr">
 <head>
-    {% set ALT_FONT_REGEX = '/[(0-9)]+/' %}
-    {% set ALT_FONT_REPLACE = '<span class="alt-font">$0</span>' %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
@@ -10,7 +8,6 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="{{ siteUrl }}static/assets/css/lightbox.css"/>
     <link rel="stylesheet" href="{{ siteUrl }}static/assets/css/commercial.css"/>
@@ -35,7 +32,7 @@
                     <a class="grid-item--inner" href="{{ image.url }}" data-lightbox="commercial" data-title="{{ image.title }}">
                         <div class="grid-overlay"></div>
                         <div class="portfolio-image" style="background-image: url('{{ image.getUrl('mashup')}}')" alt="{{ image.title }}"></div>
-                        <h2 class="portfolio-title">{{ image.title|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw  }}</h2>
+                        <h2 class="portfolio-title">{{ image.title }}</h2>
                     </a>
                 </div>
                 {% endfor %}
