--- a/templates/components/project-slider.twig
+++ b/templates/components/project-slider.twig
@@ -11,7 +11,7 @@
                     <img class="swiper-slide-image" data-full="{{ image.url }}" src="{{ image.getUrl('transform1080p') }}" alt="{{ image.title }}">
                     <div class="caption">
                         <p>
-                            <a href="{{ project.url }}">{{ project.title|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}</a>
+                            <a href="{{ project.url }}">{{ project.title}}</a>
                         </p>
                     </div>
                 </div>
