--- a/templates/components/slider.twig
+++ b/templates/components/slider.twig
@@ -10,7 +10,7 @@
             <div class="caption">
                 <p>
                     <!-- <a href="project.php">Cool Project</a> -->
-                    {{ image.title|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw  }}
+                    {{ image.title }}
                 </p>
             </div>
         </div>
