--- a/templates/home.twig
+++ b/templates/home.twig
@@ -15,7 +15,7 @@
 <section  >
   <div id="about" class="main project-overview">
 
-      <p>{{entry.about|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}</p>
+      <p>{{entry.about }}</p>
 
       <div class="spacer-1rem"></div>
       <div class="exhibitions general-content">
@@ -26,7 +26,7 @@
         SELECTED PROJECTS & EXHIBITIONS <br><br>
             {% for item in resumeItems %}
             <span class="resume-items-list-item">
-                <span class="numbers">{{ item.year|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}</span> {{ item.projectName|replace(ALT_FONT_REGEX, ALT_FONT_REPLACE)|raw }}<br />
+                <span class="numbers">{{ item.year }}</span> {{ item.projectName }}<br />
             </span>
             {% endfor %}
         </p>
