working on masu page

--- a/templates/components/menu.twig
+++ b/templates/components/menu.twig
@@ -23,7 +23,7 @@
         <div class=project-items>
             <div class="year">
                 {% if link.navigationExtra %}
-                <p>{{ link.navigationExtra }}</p>
+                <p class="index-year">{{ link.navigationExtra }}</p>
                 {% endif %}
             </div>
             <div class="title">
