--- a/templates/components/menu.twig
+++ b/templates/components/menu.twig
@@ -5,7 +5,7 @@
             <a href="{{ siteUrl }}mashup">johanna ulfsak</a>
         </div>
         <div class="item2">
-            <a href="{{ siteUrl }}#about">about</a>
+            <a href="{{ siteUrl }}about">about</a>
         </div>
         <div class="item3 index-subnav-toggle">
             <a class="">index</a>
