--- a/templates/mashup.twig
+++ b/templates/mashup.twig
@@ -1,32 +1,23 @@
 {% extends "index" %}
 
 {% block content %}
+        <div class="spacer-2rem">
 
-{% set images = entry.images.all() %}
-{% if images %}
-<link rel="stylesheet" href="{{ siteUrl }}static/assets/css/lightbox.css"/>
-<link rel="stylesheet" href="{{ siteUrl }}static/assets/css/mashup.css"/>
-<section class="mashup-container">
+        </div>
+        <div class="masu-container">
 
-    {% for image in images %}
-    <div class="mashup-item">
-        <a href="{{ image.url }}" data-lightbox="mashup" data-title="{{ image.title }}">
-            <div class="mashup-window" style="background-image: url('{{ image.getUrl('mashup')}}');">
-                <div class="mashup-overlay"></div>
+            <div class="masu-items-wrapper">
+                {% set images = entry.images.all() %}
+                {% if images %}
+                {% for image in images %}
+                <div class="masu-item">
+                    <img class="masu-img" src="{{ image.url }}" alt="1">
+                    <div class="masu-overlay caption">
+                        <p >{{ image.title }}</p>
+                    </div>
+                </div>
+            {% endfor %}
+            {% endif %}
             </div>
-        </a>
-    </div>
-    {% endfor %}
-
-</section>
-<script src="{{ siteUrl }}static/assets/js/lightbox-plus-jquery.js"></script>
-<script>
-    lightbox.option({
-      'disableScrolling': true,
-      'alwaysShowNavOnTouchDevices': true,
-      'wrapAround': true
-    })
-</script>
-
-{% endif %}
+        </div>
 {% endblock %}
