feat: fix link colour

--- a/templates/components/menu.twig
+++ b/templates/components/menu.twig
@@ -28,7 +28,7 @@
             </div>
             <div class="title">
                 {% set destination = link.navigationDestination.one() %}
-                <a href="{{ destination.url }}">
+                <a class="navlink" href="{{ destination.url }}">
                     <p class="letters">{{ link.navigationTitle }}</p>
                 </a>
             </div>
