feat: removed image resize

--- a/templates/components/slider.twig
+++ b/templates/components/slider.twig
@@ -6,7 +6,10 @@
         <div class="swiper-slide slide zoomable">
             <div class="magnifying-glass"></div>
             <div class="large"></div>
+            <img class="swiper-slide-image" data-full="{{ image.url }}" src="{{ image.url }}" alt="{{ image.title }}">
+            {#
             <img class="swiper-slide-image" data-full="{{ image.url }}" src="{{ image.getUrl('transform1080p') }}" alt="{{ image.title }}">
+            #}
             <div class="caption">
                 <p>
                     <!-- <a href="project.php">Cool Project</a> -->
