--- a/templates/index.twig
+++ b/templates/index.twig
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0"/>
     <title>johanna ulfsak</title>
     <link rel="shortcut icon" type="image/png" href="{{ siteUrl }}static/img/favicon.png"/>
-    <link rel="apple-touch-icon" type="image/png" href="{{ siteUrl }}static/img/favicon.png">
+    <link rel="apple-touch-icon" type="image/png" href="{{ siteUrl }}static/img/favicon.png"/>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
